Mark dependencies as provided to prevent oblique transitive dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.corese4rch</groupId>
@@ -37,11 +38,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
